
    HDFS-8657. Update docs for mSNN. (Jesse Yates via atm)

    HDFS-8800. hdfs --daemon stop namenode corrupts logs (John Smith via aw)

Release 2.8.0 - UNRELEASED

  NEW FEATURES

    HDFS-7891. A block placement policy with best rack failure tolerance.
    (Walter Su via szetszwo)

    HDFS-8131. Implement a space balanced block placement policy (Liu Shaohui
    via kihwal)

  IMPROVEMENTS

    HDFS-8821. Explain message "Operation category X is not supported
    in state standby" (Gautam Gopalakrishnan via harsh)

    HDFS-3918. EditLogTailer shouldn't log WARN when other node
    is in standby mode (todd via harsh)

    HDFS-4396. Add START_MSG/SHUTDOWN_MSG for ZKFC
    (Liang Xie via harsh)

    HDFS-7875. Improve log message when wrong value configured for
    dfs.datanode.failed.volumes.tolerated.
    (nijel via harsh)

    HDFS-2360. Ugly stacktrace when quota exceeds. (harsh)

    HDFS-7835. make initial sleeptime in locateFollowingBlock configurable for
    DFSClient. (Zhihai Xu via Yongjun Zhang)

    HDFS-7829. Code clean up for LocatedBlock. (Takanobu Asanuma via jing9)

    HDFS-7854. Separate class DataStreamer out of DFSOutputStream. (Li Bo via
    jing9)

    HDFS-7713. Implement mkdirs in the HDFS Web UI. (Ravi Prakash via wheat9)

    HDFS-7928. Scanning blocks from disk during rolling upgrade startup takes
    a lot of time if disks are busy (Rushabh S Shah via kihwal)

    HDFS-7990. IBR delete ack should not be delayed. (daryn via kihwal)

    HDFS-8004. Use KeyProviderCryptoExtension#warmUpEncryptedKeys when creating
    an encryption zone. (awang via asuresh)

    HDFS-6263. Remove DRFA.MaxBackupIndex config from log4j.properties.
    (Abhiraj Butala via aajisaka)

    HDFS-6408. Remove redundant definitions in log4j.properties.
    (Abhiraj Butala via aajisaka)

    HDFS-7890. Improve information on Top users for metrics in
    RollingWindowsManager and lower log level (J.Andreina via vinayakumarb)
